# cpp_project_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/module1/: Bar.cpp  CMakeLists.txt
src/module1/test/: mock.cpp
src/module2/: Bar.h  CMakeLists.txt  Foo.cpp  main.cpp
src/module2/export/: Foo.h
src/test/: Bar.h  CMakeLists.txt  test.cpp
